--- a/static/scss/components/Button.scss
+++ b/static/scss/components/Button.scss
@@ -4,7 +4,7 @@
   button {
     display: inline-block;
     border: none;
-    border-radius: 3px;
+    border-radius: 0.25rem;
     padding: 5px 20px;
     outline: none;
     margin: 0;
