--- a/static/scss/components/App.scss
+++ b/static/scss/components/App.scss
@@ -11,7 +11,6 @@
     margin: $side-margin;
   }
 
-
   .nav-link.active {
     background-color: themed('primaryColor');
     // font-weight: bold;
@@ -52,7 +51,25 @@
     }
   }
 
-  .drops {
+  .wormholes {
+    height: 100%;
+
+    .noholes {
+      margin: auto;
+      position: absolute;
+      top: 42%;
+      left: 0;
+      bottom: 0;
+      right: 0;
+      text-align: center;
+      font-weight: 300;
+
+      i {
+        font-size: 40px;
+        margin-bottom: 5px;
+      }
+    }
+
     .drop {
       margin: $side-margin;
       padding-top: $side-margin;
