--- a/static/scss/themes/default/_dark.scss
+++ b/static/scss/themes/default/_dark.scss
@@ -14,6 +14,11 @@ $darkTheme: (
 
   highlightBorderColor: #333,
 
+  modalBackgroundColor: #222,
+  modalButtonBackgroundColor: #111,
+  modalOverlayColor: #1119,
+  modalShadowColor: #0008,
+
   buttonBackgroundColor: #222,
   buttonForegroundColor: #fff,
 
