--- a/static/scss/themes/vibrancy/_dark.scss
+++ b/static/scss/themes/vibrancy/_dark.scss
@@ -1,9 +1,9 @@
 $darkTheme: (
   primaryColor: #0061E6,
   
-  windowBackgroundColor: transparent,
+  primaryBackgroundColor: transparent,
   contentBackgroundColor: #222e,
-  backgroundColor: #222,
+  secondaryBackgroundColor: #222,
   transparentBackgroundColor: #222e,
   overlayBackgroundColor: #5556,
 
