--- a/static/scss/themes/vibrancy/_light.scss
+++ b/static/scss/themes/vibrancy/_light.scss
@@ -1,9 +1,9 @@
 $lightTheme: (
   primaryColor: #0084ff,
   
-  windowBackgroundColor: transparent,
+  primaryBackgroundColor: transparent,
   contentBackgroundColor: #fffe,
-  backgroundColor: #fff,
+  secondaryBackgroundColor: #fff,
   transparentBackgroundColor: #fffe,
   overlayBackgroundColor: #eeea,
 
