--- a/static/scss/components/App.scss
+++ b/static/scss/components/App.scss
@@ -11,9 +11,15 @@
     margin: $side-margin;
   }
 
+  .nav-link:not(.active):hover {
+    opacity: 0.6;
+    color: themed('primaryForegroundColor');;
+  }
+
   .nav-link.active {
     background-color: themed('primaryColor');
-    // font-weight: bold;
+    color: themed('primaryForegroundColor');
+    font-weight: bold;
   }
 
   .toolbar {
@@ -28,10 +34,14 @@
 
     .actions {
       padding: 0px;
-    }
 
-    .actions i {
-      font-size: 16px;
+      i {
+        font-size: 16px;
+      }
+
+      .icon {
+        height: 16px;
+      }
     }
 
     .actions > .col:last-child {
@@ -57,17 +67,31 @@
     .noholes {
       margin: auto;
       position: absolute;
-      top: 42%;
+      top: 30%;
       left: 0;
       bottom: 0;
       right: 0;
       text-align: center;
-      font-weight: 300;
+      filter: brightness(60%);
+      width: 170px;
 
-      i {
-        font-size: 40px;
-        margin-bottom: 5px;
+      // opacity: 0.6;
+
+      img {
+        width: 120px;
+        margin-bottom: 10px;
+        filter: brightness(60%);
       }
+    }
+
+    .online {
+      display: inline-block;
+      vertical-align: middle;
+      margin-left: 8px;
+      width: 6px;
+      height: 6px;
+      border-radius: 100%;
+      background-color: themed('onlineColor');
     }
 
     .drop {
@@ -78,7 +102,7 @@
       background: themed('primaryColor');
 
       .progress {
-        background: themed('backgroundColor');
+        background: themed('secondaryBackgroundColor');
       }
 
       .name {
@@ -91,7 +115,6 @@
         margin-bottom: 8px;
         font-size: 13px;
         font-weight: 300;
-        color: themed('highlightBorderColor');
       }
     }
   }
