--- a/static/scss/themes/default/_dark.scss
+++ b/static/scss/themes/default/_dark.scss
@@ -1,28 +1,12 @@
 $darkTheme: (
-  primaryColor: #222,
-
-  windowBackgroundColor: #111,
-  contentBackgroundColor: #000,
-  backgroundColor: #323232,
-  transparentBackgroundColor: #3339,
-  overlayBackgroundColor: #0006,
-
-  primaryForegroundColor: #fffc,
-  primaryColorForegroundColor: #fff,
-  secondaryForegroundColor: #aaa,
-  mutedForegroundColor: #252525,
-
-  highlightBorderColor: #333,
-
-  modalBackgroundColor: #222,
-  modalButtonBackgroundColor: #111,
-  modalOverlayColor: #1119,
-  modalShadowColor: #0008,
-
-  buttonBackgroundColor: #222,
-  buttonForegroundColor: #fff,
+  primaryColor: #2c2c2e,
+  primaryForegroundColor: #f2f2f7,
+  
+  // primaryBackgroundColor: #1c1c1e,
+  primaryBackgroundColor: #111113,
+  secondaryBackgroundColor: #3a3a3c,
+  thirdlyBackgroundColor: #48484a,
 
   dangerColor: #dc3545,
-  dangerForegroundColor: #fff,
-  onlineColor: #01A452,
+  onlineColor: #01a452
 );
