--- a/static/scss/themes/default/_light.scss
+++ b/static/scss/themes/default/_light.scss
@@ -1,31 +1,11 @@
 $lightTheme: (
-  primaryColor: #0084ff,
-  
-  windowBackgroundColor: #fff,
-  contentBackgroundColor: #fff,
-  backgroundColor: #ebebeb,
-  transparentBackgroundColor: #0001,
-  overlayBackgroundColor: #fffa,
+  primaryColor: #e5e5ea,
+  primaryForegroundColor: #111113,
 
-  primaryForegroundColor: #000000,
-  primaryColorForegroundColor: #fff,
-  secondaryForegroundColor: #555,
-  mutedForegroundColor: #a5a5a5,
-
-  highlightBorderColor: #eee,
-
-  sidebarBackgroundColor: #f5f5f5,
-  sidebarSelectedItemBackgroundColor: #ebebeb,
-
-  modalBackgroundColor: #fff,
-  modalOverlayColor: #1119,
-  modalShadowColor: #0003,
-  
-  toolbarButtonColor: #0084ff,
-  buttonBackgroundColor: #0084ff,
-  buttonForegroundColor: #fff,
+  primaryBackgroundColor: #fafaff,
+  secondaryBackgroundColor: #d1d1d6,
+  thirdlyBackgroundColor: #c7c7cc,
 
   dangerColor: #dc3545,
-  dangerForegroundColor: #fff,
-  onlineColor: #01A452,
+  onlineColor: #01a452,
 );
