Modularise end-to-end encryption, use sass-loader dep and update deps

--- a/static/scss/index.scss
+++ b/static/scss/index.scss
@@ -1,6 +1,9 @@
 @import '~bootstrap/scss/bootstrap';
 
-@import 'components/*';
+@import 'components/App.scss';
+@import 'components/Button.scss';
+@import 'components/Modal.scss';
+@import 'components/Notification.scss';
 @import 'ionicons';
 @import 'themes';
 
